--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nextra-theme-docs": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "xml2js": "^0.5.0"
   }
 }
